# hammer-surf-anglefix

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: anglefix.h  build-preset.h  util.h  vmf.h
src/: CMakeLists.txt  anglefixer.c  anglefixer.h  build-preset.c  main.c  math.c  mathh.h  test.c  util.c  util.h  vbsp_wrapper.c  vmf.c
tests/: 1-anglefixed.vmf  1.vmf
